--- a/main.css
+++ b/main.css
@@ -138,7 +138,7 @@ li#nav-left {
     transform: scaleX(-1);
 }
 
-#home-main {
+#home {
     margin: 175px 50px;
     display: flex;
     justify-content: center;
@@ -204,7 +204,7 @@ li#nav-left {
         padding: 0;
     }
 
-    #home-main {
+    #home {
         margin-bottom: calc(50px + (100vw - 500px)/2);
     }
 
