--- a/main.css
+++ b/main.css
@@ -19,6 +19,11 @@
     100%  { transform: translateY(0px); opacity: 100%; }
 }
 
+@keyframes rotate {
+    0% { transform: rotate(45deg); }
+    100% { transform: rotate(180deg); }
+}
+
 * {
     font-family: 'Nunito Sans', sans-serif;
     font-size: 16px;
@@ -35,6 +40,10 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+::-webkit-scrollbar {
+    width: 0;
 }
 
 h1 {
@@ -87,8 +96,9 @@ nav li {
     margin: 0 25px;
 }
 
-::-webkit-scrollbar {
-    width: 0;
+#nav-items {
+    display: flex;
+    opacity: 100%;
 }
 
 li#nav-left {
@@ -117,7 +127,55 @@ li#nav-left {
     margin-right: 25px;
 }
 
+#hamburger-menu {
+    margin: 0;
+    display: none;
+}
+
+#hamburger-menu button {
+    width: 50px;
+    height: 50px;
+    background: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#hamburger,
+#hamburger::before,
+#hamburger::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 50px;
+    height: 3px;
+    background-color: #ffffff;
+    transition: all .3s;
+}
+
+#hamburger::before {
+    transform: translateY(-15px);
+}
+
+#hamburger::after {
+    transform: translateY(15px);
+}
+
+#hamburger-menu button.open #hamburger {
+    background-color: #ffffff00;
+    transform: rotate(45deg);
+}
+
+#hamburger-menu button.open #hamburger::before {
+    transform: rotate(-90deg);
+}
+
+#hamburger-menu button.open #hamburger::after {
+    transform: rotate(0deg);
+}
+
 .gray-boars {
+    z-index: -1;
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -127,7 +185,6 @@ li#nav-left {
 .gray-boar {
     width: 400px;
     position: absolute;
-    z-index: -1;
     right: -100px;
     rotate: -20deg;
 }
@@ -144,7 +201,7 @@ li#nav-left {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    max-width: 800px;
+    max-width: 900px;
 }
 
 #summary {
@@ -177,7 +234,7 @@ li#nav-left {
 }
 
 .feature img {
-    max-width: 300px;
+    max-width: 400px;
 }
 
 .feature:nth-of-type(odd) img {
@@ -188,20 +245,45 @@ li#nav-left {
     max-width: 400px;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1000px) {
     nav {
         justify-content: center;
+        align-items: center;
         padding: 0 25px;
         margin: 0;
     }
 
     nav li {
+        margin-bottom: 25px;
+    }
+
+    #nav-left {
+        margin-bottom: 0;
+    }
+
+    #nav-items {
+        opacity: 0;
         display: none;
+        position: absolute;
+        padding-top: 25px;
+        top: 75px;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        background-color: #151518bb;
+        width: 100vw;
+        transition: opacity .3s;
     }
 
     li#nav-left {
-        margin: 0;
+        position: unset;
+        margin-left: 0;
         padding: 0;
+    }
+
+    #hamburger-menu {
+        position: unset;
+        display: block;
     }
 
     #home {
