--- a/main.css
+++ b/main.css
@@ -96,6 +96,15 @@ nav li {
     margin: 0 25px;
 }
 
+main {
+    margin: 175px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 900px;
+}
+
 #nav-items {
     display: flex;
     opacity: 100%;
@@ -195,15 +204,6 @@ li#nav-left {
     transform: scaleX(-1);
 }
 
-#home {
-    margin: 175px 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    max-width: 900px;
-}
-
 #summary {
     display: flex;
     justify-content: center;
@@ -243,6 +243,33 @@ li#nav-left {
 
 .feature div {
     max-width: 400px;
+}
+
+.legal-section {
+    width: 100%;
+}
+
+.legal-section h1 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.legal-section div {
+    background-color: #2D2F31;
+    padding: 50px;
+    border-radius: 10px;
+}
+
+.legal-section ul {
+    margin-left: 15px;
+}
+
+.legal-section h2 {
+    margin: 10px 0;
+}
+
+.legal-section:first-of-type {
+    margin-bottom: 50px;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -286,10 +313,6 @@ li#nav-left {
         display: block;
     }
 
-    #home {
-        margin-bottom: calc(50px + (100vw - 500px)/2);
-    }
-
     .feature {
         flex-direction: column;
         text-align: center;
@@ -299,5 +322,9 @@ li#nav-left {
         width: 100%;
         margin-top: 50px;
         order: 2;
+    }
+
+    .legal-section div {
+        padding: 25px;
     }
 }
