--- a/main.css
+++ b/main.css
@@ -15,13 +15,8 @@
 }
 
 @keyframes fadeIn {
-    0%  { transform: translateY(25px); opacity: 0%; }
-    100%  { transform: translateY(0px); opacity: 100%; }
-}
-
-@keyframes rotate {
-    0% { transform: rotate(45deg); }
-    100% { transform: rotate(180deg); }
+    from  { transform: translateY(25px); opacity: 0%; }
+    to  { transform: translateY(0px); opacity: 100%; }
 }
 
 * {
