Added rounded corners to image in side panel

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -98,3 +98,7 @@ blockquote {
     background-color: var(--secondary-background-color);
 }
 
+.side-info > p > img {
+    border-radius: 0.4rem;
+}
+
