--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -22,6 +22,7 @@
   --ifm-menu-color: var(--ifm-color-content-secondary);
   --ifm-code-background: var(--secondary-background-color);
   --ifm-blockquote-color: var(--ifm-color-content-secondary);
+  --ifm-blockquote-padding-vertical: 1rem;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
@@ -33,6 +34,11 @@
 
 .navbar-sidebar__brand {
   box-shadow: none;
+}
+
+.col--3 {
+  display: none;
+  width: 0;
 }
 
 .pagination-nav__link {
@@ -88,29 +94,135 @@ blockquote {
 }
 
 .side-info {
-    width: 100%;
-    max-width: 400px;
-    margin-bottom: 18px;
-    border-radius: 0.4rem;
-    overflow: hidden;
-    padding: 15px;
+    width: 20rem;
+    margin: 0 0 0 var(--ifm-global-spacing);
+    float: right;
+    padding: var(--ifm-global-spacing);
     background-color: var(--secondary-background-color);
 }
 
-@media screen and (min-width: 997px) {
+.side-info.common img {
+  border: 5px solid #FFFFFF;
+}
+
+.side-info.uncommon img {
+  border: 5px solid #00FF0F;
+}
+
+.side-info.rare img {
+  border: 5px solid #0064FF;
+}
+
+.side-info.epic img {
+  border: 5px solid #7B00FF;
+}
+
+.side-info.legendary img {
+  border: 5px solid #FFC500;
+}
+
+.side-info.mythic img {
+  border: 5px solid #F300FF;
+}
+
+.side-info.divine img {
+  border: 5px solid #00FFFB;
+}
+
+.side-info.immaculate img {
+  border: 5px solid transparent;
+  border-image: linear-gradient(to bottom right, #FF6666, #FFB566, #FFFA66, #74FF66, #666BFF, #B966FF) 1;
+}
+
+.side-info.entropic img {
+  border: 5px solid #FFFFFF;
+  border-image: linear-gradient(to bottom right, #FFA6BB, #DAACFE) 1;
+}
+
+.side-info.truth img {
+  border: 5px solid #FFFFFF;
+  border-image: linear-gradient(to bottom right, #633FC0, #5CC3C4, #633FC0) 1;
+}
+
+.side-info.special img {
+  border: 5px solid #FFFFFF;
+  border-image: linear-gradient(to bottom right, #BC2326, #FF3136, #BC2326) 1;
+}
+
+div .docItemCol_VOVn {
+  max-width: 1100px !important;
+}
+
+.markdown h1, h2 {
+  border-bottom: solid 2px var(--secondary-background-color);
+  padding-bottom: var(--ifm-global-spacing);
+}
+
+.markdown > h2,
+.markdown > h3,
+.markdown > h4,
+.markdown > h5,
+.markdown > h6 {
+  margin-top: 0;
+}
+
+.markdown > h3 {
+  margin-top: 0;
+}
+
+.markdown > *:not(header):not(aside) {
+  margin-right: calc(20rem + var(--ifm-global-spacing));
+}
+
+.side-info h2 {
+  text-align: center;
+  padding-bottom: 0;
+}
+
+.side-info h2 a,
+.side-info h3 a {
+  display: none;
+}
+
+.side-info img {
+  display: block;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.side-info p:last-of-type {
+  margin-bottom: 0;
+}
+
+.side-info h3 {
+  margin-bottom: 0;
+}
+
+.theme-doc-toc-mobile {
+  display: none;
+}
+
+@media screen and (max-width: 996px) {
+  .markdown {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .markdown > *:not(header):not(aside) {
+    margin-right: 0;
+  }
+
   .side-info {
-    float: right;
-    clear: right;
-    width: 270px;
-    margin: 0 0 18px 18px;
+    margin-left: 0;
+    max-width: 30rem;
+    width: 100%;
+    align-self: center;
+    margin: 0 0 var(--ifm-global-spacing);
   }
 
-  main {
-      margin-top: calc(0px - var(--ifm-navbar-height));
+  .side-info img {
+    display: block;
+    max-width: 300px;
+    margin: 0 auto;
   }
 }
-
-.side-info > p > img {
-    border-radius: 0.4rem;
-}
-
